2017 Nov 02 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.0.1
* Removing debugging printouts
* pypi friendlier package description

2017 Oct 29 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.0.0
* First public version for Python 3. From now on Python 2 is not supported.
* pip installable

2016 Dec 26 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 3.0.2
* Getting rid of QWebKit dependency. It is not found in newer Ubuntu releases

2016 Sep 14 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 3.0.1
* Fixes packaging for Fedora and Centos

2016 Sep 05 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 3.0.0
* Major new feature: automatic flow chart generation on a separate pane

2015 Oct 15 Sergey Satskiy <sergey.satskiy@gmail.com>

* Replacing old style SIGNAL with pyqtSignal in many places
* Bug fix: clear find-in-files results when a project is changed
* Bug fix: exception is case when files in a project directory are created
  and deleted very quickly
* Fix for pylint 1.2.1
* GC plugin: mimic standard GC procedure
* Fix: 'remove all ignored exception types' did not clear the list in memory
* New feature: saving profiling results table in a CSV file
* F12: make the cursor line the first on the screen
* Get rid of QString, use python strings instead
* Fix: ESC handling on a VCS annotate view
* Improvement: more robust processing of a VCS revision information
* Many minor fixes

2014 May 06 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.3.1
* New feature: navigation bar
* Bug fix: mouse click in the editor led to a sporadic crash
* New feature: implementation of a context menu for the redirected IO console
  including copying everything with timestamps
* Main toolbar could be hidden/shown via a setting

2014 Mar 11 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.3.0
* New feature: debugging and running script now can have IO redirected to IDE
* New feature: allow selecting multiple files in the 'Open file' dialog